# iio-apps

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  buffer.c  buffer_attr.c  cmake_install.cmake  ctx-attr.c  ctx_attr.c  ctx_attr_calib.c  ctx_read_buffer.c  ctx_read_raw.c  ctxattr.c  ctxattr_buffer.c  ctxattr_calibration.c  get_raw.c  getbuffer.c  getraw.c  hello.c  iio-raw_buffer  iio-raw_ctxattr  iio-raw_getraw  iio-raw_hello  raw.c  second.c  second.h
.cmake/api/v1/reply/: cache-v2-278b4fdbd21cd84bc373.json  cmakeFiles-v1-9ccb8b3a246784c25c00.json  codemodel-v2-2ce52f3ef91bd2e0b697.json  codemodel-v2-617952978e7fef07b6d7.json  index-2022-08-24T12-20-00-0010.json  index-2022-08-24T12-53-08-0692.json  target-iio-raw_ctxattr-Debug-19c0e1a2741bf5c676c1.json  target-iio-raw_getraw-Debug-0b14236342b7985e84ac.json  target-iio-raw_getraw-Debug-c79b104cc617b299c94e.json  target-iio-raw_hello-Debug-0b1a66861482f82d467e.json
FlightSimulatorApp/: mainwindow.cpp
Widgetsapp/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
build-FlightSimulatorApp-Desktop-Debug/: CMakeCache.txt  Makefile  cmake_install.cmake  widgetsapp
build-FlightSimulatorApp-Desktop-Debug/.cmake/api/v1/reply/: cache-v2-73ccd4c2fd70477c28b3.json  cmakeFiles-v1-c71098bc7d9748a887e3.json  codemodel-v2-f7fd46a46672c9f14703.json  index-2022-08-25T14-25-05-0251.json  target-widgetsapp-Debug-bdfc7584334db634e7be.json  target-widgetsapp_autogen-Debug-17574aa0c286a30b57c3.json
build-FlightSimulatorApp-Desktop-Debug/widgetsapp_autogen/: moc_predefs.h
build-FlightSimulatorApp-Desktop-Debug/widgetsapp_autogen/EWIEGA46WW/: moc_mainwindow.cpp  moc_mainwindow.cpp.d
build-FlightSimulatorApp-Desktop-Debug/widgetsapp_autogen/include/: ui_mainwindow.h
build-consoleapps-Desktop-Debug/: CMakeCache.txt  Makefile  cmake_install.cmake  iio-raw_buffer  iio-raw_ctxattr  iio-raw_getraw  iio-raw_hello
build-consoleapps-Desktop-Debug/.cmake/api/v1/reply/: cache-v2-afebc1947b80f8f89c93.json  cmakeFiles-v1-a9d8b5748ab9a8d5a643.json  codemodel-v2-0e76debab4d4681bb629.json  index-2022-08-25T14-17-22-0728.json  target-iio-raw_buffer-Debug-4bccba0a855ca2b5de4b.json  target-iio-raw_ctxattr-Debug-3da5de926b980703479e.json
build-iio_raw-Desktop-Debug/: CMakeCache.txt  Makefile  cmake_install.cmake  hello_ctxattr  hello_hello  iio_raw_buffer  iio_raw_ctxattr  iio_raw_getraw  iio_raw_rawattr
build-iio_raw-Desktop-Debug/.cmake/api/v1/reply/: cache-v2-54c119db49d71f479bc5.json  cmakeFiles-v1-46a0717b9e95c3fb8c43.json  codemodel-v2-4dbb594365b8a6bf8669.json  index-2022-08-25T09-09-36-0975.json  target-iio_raw_buffer-Debug-d447d746d3242d452b4e.json  target-iio_raw_ctxattr-Debug-fcebc8d0808dbd818ce1.json  target-iio_raw_getraw-Debug-be17c176e97631df14c7.json  target-iio_raw_hello-Debug-c46debadffaf4980a02e.json
build-iio_raw-Desktop-Release/: CMakeCache.txt  Makefile  cmake_install.cmake
build-iio_raw-Desktop-Release/.cmake/api/v1/reply/: cache-v2-3abbfb0893ccfa097bf0.json  cmakeFiles-v1-0093357816fd40d5605b.json  codemodel-v2-d335c3d3835521ee02d5.json  index-2022-08-25T09-11-25-0636.json  target-iio_raw_buffer-Release-657a7879e3e7e775ac90.json  target-iio_raw_ctxattr-Release-a500435a9ffef74af6ca.json  target-iio_raw_getraw-Release-e6bc7617ea27ae027312.json  target-iio_raw_hello-Release-914fc79e983ffdde5fac.json
consola_apps/: CMakeLists.txt  hello.c
console_apps/: CMakeLists.txt  buffer.c  calibration.c  context_attr.c  ctxattr_attr.c  ctxattr_buffer.c  ctxattr_calibration.c  ctxattr_raw.c  hello.c  second.h  shock.c
consoleapps/: CMakeLists.txt  buffer.c  buffer_attr.c  calibrare.c  ctx_attr.c  ctx_read_attr.c  ctx_read_raw.c  ctxattr.c  detect_shock.c  get_raw.c  getbuffer.c  getraw.c  hello.c  iio-getbuffer.c  iio-getraw.c  raw.c
hello/: .second.c.swp  CMakeLists.txt  hello.c  second.c
iio_raw/: CMakeLists.txt  buffer.c  ctxattr.c  getraw.c  hello.c
widgetapp/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
widgetapp/widgetapp/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
widgetapps/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
widgetsApp/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
widgets_app/build-widgetsapp-Desktop-Debug/: CMakeCache.txt  Makefile  cmake_install.cmake  qtcsettings.cmake  widgetsapp
widgets_app/build-widgetsapp-Desktop-Debug/.cmake/api/v1/reply/: cache-v2-0449dd878d60f7063e05.json  cmakeFiles-v1-b8133d5f3530b7888195.json  codemodel-v2-7f392f701e9943f73204.json  index-2022-08-25T14-41-21-0797.json  target-widgetsapp-Debug-a11916c900facfd0cdd5.json  target-widgetsapp_autogen-Debug-7f338deac3869fa29cb5.json
widgets_app/build-widgetsapp-Desktop-Debug/widgetsapp_autogen/: moc_predefs.h
widgets_app/build-widgetsapp-Desktop-Debug/widgetsapp_autogen/EWIEGA46WW/: moc_mainwindow.cpp  moc_mainwindow.cpp.d
widgets_app/build-widgetsapp-Desktop-Debug/widgetsapp_autogen/include/: ui_mainwindow.h
widgets_app/widgetsapp/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
widgetsapp/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
